<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/imageViewDummy01"
            android:layout_column="3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="74dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="67dp"
                android:id="@+id/imageView"
                android:src="@drawable/resistor"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="13dp"
                android:layout_height="75dp"
                android:id="@+id/textViewBand01"
                android:layout_marginLeft="87dp"
                android:layout_alignLeft="@id/imageView"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="15dp"
                android:layout_height="75dp"
                android:id="@+id/textViewBand02"
                android:layout_marginLeft="114dp"
                android:layout_alignLeft="@id/imageView"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="18dp"
                android:layout_height="75dp"
                android:id="@+id/textViewMultiplier"
                android:layout_marginLeft="147dp"
                android:layout_alignLeft="@id/imageView"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="13dp"
                android:layout_height="75dp"
                android:id="@+id/textViewTolerance"
                android:layout_marginLeft="207dp"
                android:layout_alignLeft="@id/imageView"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/imageViewDummy03"
            android:layout_column="3" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="60dp">

            <Spinner
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/spinner1"
                android:layout_column="0" />

            <Spinner
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/spinner2"
                android:layout_column="1" />

            <Spinner
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/spinner3"
                android:layout_column="2" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewDummy02"
                android:layout_column="3" />

            <Spinner
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/spinner4"
                android:layout_column="4" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/band01"
                android:id="@+id/textView2"
                android:layout_column="0"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/band02"
                android:id="@+id/textView3"
                android:layout_column="1"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/multi"
                android:id="@+id/textView4"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tolerance"
                android:id="@+id/textView5"
                android:layout_column="4" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/imageView2"
                android:layout_column="3" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tableLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblToleance"
            android:id="@+id/textView"
            android:layout_column="2"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblResult"
            android:id="@+id/textView6"
            android:layout_column="2"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblResultToler"
            android:id="@+id/textView7"
            android:layout_column="2"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
